# fastpypi

./: .gitignore  Makefile  README.md  docker-compose.yaml
api/: .dockerignore  Dockerfile  logging.yaml  pyproject.toml
api/dev/: run.py
api/fastpypi/: config.py  main.py  middleware.py  router.py  utils.py
api/fastpypi/routes/: repo.py
api/scripts/: coverage.sh  format.sh  lint.sh
nginx/: default.conf
package/: pyproject.toml
package/dev/: script.py
package/scripts/: build.sh  coverage.sh  format.sh  lint.sh
