[tool.poetry]
name = "fastpypi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "fastpypi" },
    { include = "fastpypi/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
aiofiles = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.5b1"
isort = "^5.8.0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^6.2.4"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 129

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 129
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.poetry.scripts]
dev = "dev.run:main"
lint = "dev.script:lint"
format = "dev.script:format"
coverage = "dev.script:coverage"
script = "dev.script:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
